div()
Pythinix 2.3 Changelog
div()
* pkm/installd
    * pkm and installd are now much smarter.
    * You can no longer remove dependencies of a program.
    * 
div()