@@ -1,2 +1,2 @@
 #!/usr/bin/sh
-kate pythinux.py resetinstall.py buildscript.sh README.md ROADMAP.md DIRLISTING.md pythinux/man/changelog pythinux/system/pkm.py pythinux/system/installd.py pythinux/man/lint
+kate pythinux.py resetinstall.py buildscript.sh README.md ROADMAP.md DIRLISTING.md pythinux/man/changelog pythinux/man/pydoc pythinux/system/pkm.py pythinux/system/installd.py pythinux/man/lint
