@@ -1,10 +1,9 @@
 # This file was autogenerated using flake8.
 # flake8 is a code linter that lists all violations of python standards.
-pythinux.py:18:1: F401 'types' imported but unused
-pythinux.py:28:80: E501 line too long (152 > 79 characters)
-pythinux.py:32:80: E501 line too long (208 > 79 characters)
-pythinux.py:35:80: E501 line too long (207 > 79 characters)
-pythinux.py:49:1: F811 redefinition of unused 'castObject' from line 26
-pythinux.py:51:80: E501 line too long (152 > 79 characters)
-pythinux.py:55:80: E501 line too long (208 > 79 characters)
-pythinux.py:58:80: E501 line too long (207 > 79 characters)
+pythinux.py:27:80: E501 line too long (152 > 79 characters)
+pythinux.py:31:80: E501 line too long (208 > 79 characters)
+pythinux.py:34:80: E501 line too long (207 > 79 characters)
+pythinux.py:48:1: F811 redefinition of unused 'castObject' from line 25
+pythinux.py:50:80: E501 line too long (152 > 79 characters)
+pythinux.py:54:80: E501 line too long (208 > 79 characters)
+pythinux.py:57:80: E501 line too long (207 > 79 characters)
